--- a/TestResults/index.html
+++ b/TestResults/index.html
@@ -49,7 +49,7 @@
           </li>
             <li class="m-r-10">
                 <a href="#">
-                    <span class="badge badge-primary">13-01-2025 10:15:41</span>
+                    <span class="badge badge-primary">10-02-2025 11:48:25</span>
                 </a>
             </li>
         </ul>
@@ -119,8 +119,8 @@
 						<div class="open-test">
 							<div class="test-detail"> 
 								<p class="name">OrangeHRMLogin Login functionality using resuable flow</p> 
-								<p class="duration text-sm">0h:0m:9s+645ms</p> 
-								<span class="datetime">10:15:41 AM</span>
+								<p class="duration text-sm">0h:0m:19s+803ms</p> 
+								<span class="datetime">11:48:25 AM</span>
 							</div>
 						</div>
 						<div class="test-contents d-none">
@@ -128,9 +128,9 @@
 								<div class="p-v-10 d-inline-block">	
 									<div class="info">
 										<h5 class="test-status text-pass">OrangeHRMLogin Login functionality using resuable flow</h5>
-										<span class='badge badge-success'>13-01-2025 10:15:41</span>
-										<span class='badge badge-danger'>13-01-2025 10:15:50</span>
-										<span class='badge badge-default'>0h:0m:9s+645ms</span>
+										<span class='badge badge-success'>10-02-2025 11:48:25</span>
+										<span class='badge badge-danger'>10-02-2025 11:48:45</span>
+										<span class='badge badge-default'>0h:0m:19s+803ms</span>
 									</div>
 																	</div>
 							</div>
@@ -158,6 +158,42 @@
                                     <i class="fa fa-check text-white"></i>
                                 </span>
                                 <span>Then User is navigated to "Dashboard" page</span>
+                            </div>
+                            <div class="d-flex align-items-center justify-content-start when" title="">
+                                <span class="alert-icon pass-bg">
+                                    <i class="fa fa-check text-white"></i>
+                                </span>
+                                <span>When User waits for the "LeftNavDashboard" element to load</span>
+                            </div>
+                            <div class="d-flex align-items-center justify-content-start then" title="">
+                                <span class="alert-icon pass-bg">
+                                    <i class="fa fa-check text-white"></i>
+                                </span>
+                                <span>Then User sees "LeftNavDashboard" tab highlighted</span>
+                            </div>
+                            <div class="d-flex align-items-center justify-content-start when" title="">
+                                <span class="alert-icon pass-bg">
+                                    <i class="fa fa-check text-white"></i>
+                                </span>
+                                <span>When User clicks on the "LeftNavAdmin" button</span>
+                            </div>
+                            <div class="d-flex align-items-center justify-content-start then" title="">
+                                <span class="alert-icon pass-bg">
+                                    <i class="fa fa-check text-white"></i>
+                                </span>
+                                <span>Then User is navigated to "Admin" page</span>
+                            </div>
+                            <div class="d-flex align-items-center justify-content-start when" title="">
+                                <span class="alert-icon pass-bg">
+                                    <i class="fa fa-check text-white"></i>
+                                </span>
+                                <span>When User waits for the "Admin" element to load</span>
+                            </div>
+                            <div class="d-flex align-items-center justify-content-start then" title="">
+                                <span class="alert-icon pass-bg">
+                                    <i class="fa fa-check text-white"></i>
+                                </span>
+                                <span>Then User selects city and country information</span>
                             </div>
                     </div>
 				</div>
@@ -238,7 +274,7 @@
 	                </div>
 	            </div>
 	            <div class="card-footer">
-	                <div><small data-tooltip='100%'><b>2</b> steps passed</small></div>
+	                <div><small data-tooltip='100%'><b>8</b> steps passed</small></div>
 	                <div>
 	                    <small data-tooltip='0%'><b>0</b> steps failed, 
 	                    <b data-tooltip='0%'>0</b> others
@@ -293,7 +329,7 @@
 	                <div class="media justify-content-between">
 						<div>
 							<h6 class="card-title">Start</h6>
-							<h6 class="font-weight-light">13-01-2025 10:15:41</h6>
+							<h6 class="font-weight-light">10-02-2025 11:48:25</h6>
 							<span class="text-semibold text-success font-size-15">
 						</div>
 						<div class="align-self-end">
@@ -309,7 +345,7 @@
 	                <div class="media justify-content-between">
 						<div>
 							<h6 class="card-title">Duration</h6>
-							<h6 class="font-weight-light">00:00:10.1599239</h6>
+							<h6 class="font-weight-light">00:00:20.0325637</h6>
 							<span class="text-semibold text-danger font-size-15">
 						</div>
 						<div class="align-self-end">
@@ -374,8 +410,8 @@
 		infoChild: 0,
 		debugChild: 0,
 		exceptionsChild: 0,
-		grandChildCount: 2,
-		passGrandChild: 2,
+		grandChildCount: 8,
+		passGrandChild: 8,
 		failGrandChild: 0,
 		fatalGrandChild: 0,
 		errorGrandChild: 0,
