--- a/TestResults/index.html
+++ b/TestResults/index.html
@@ -49,7 +49,7 @@
           </li>
             <li class="m-r-10">
                 <a href="#">
-                    <span class="badge badge-primary">10-02-2025 11:48:25</span>
+                    <span class="badge badge-primary">11-02-2025 14:54:12</span>
                 </a>
             </li>
         </ul>
@@ -104,7 +104,7 @@
 						<i class="fa fa-exclamation-circle"></i>
 					</a>
 					<ul id="status-toggle" class="dropdown-menu dropdown-md p-v-0">
-<a status="pass" class="dropdown-item" href="#"><span>Pass</span><span class="status success pull-right"></span></a>																																				<div class="dropdown-divider"></div>
+<a status="pass" class="dropdown-item" href="#"><span>Pass</span><span class="status success pull-right"></span></a>						<a status="fail" class="dropdown-item" href="#"><span>Fail</span><span class="status danger pull-right"></span></a>																														<div class="dropdown-divider"></div>
 						<a status="clear" class="dropdown-item" href="#"><span>Clear</span><span class="pull-right"><i class="fa fa-close"></i></span></a>
 					</ul>
 				</li>
@@ -112,25 +112,25 @@
         </div>
         <div class="test-list-wrapper scrollable">
             <ul class="test-list-item">
-					<li class="test-item" status="pass" author="" device="" tag="" test-id="1"> 
-						<div class="status-avatar pass-bg">
-							<i class="fa fa-check text-white"></i>
+					<li class="test-item" status="fail" author="" device="" tag="" test-id="1"> 
+						<div class="status-avatar fail-bg">
+							<i class="fa fa-times text-white"></i>
 						</div>
 						<div class="open-test">
 							<div class="test-detail"> 
 								<p class="name">OrangeHRMLogin Login functionality using resuable flow</p> 
-								<p class="duration text-sm">0h:0m:19s+803ms</p> 
-								<span class="datetime">11:48:25 AM</span>
+								<p class="duration text-sm">0h:0m:25s+891ms</p> 
+								<span class="datetime">14:54:12 PM</span>
 							</div>
 						</div>
 						<div class="test-contents d-none">
 							<div class="detail-head">
 								<div class="p-v-10 d-inline-block">	
 									<div class="info">
-										<h5 class="test-status text-pass">OrangeHRMLogin Login functionality using resuable flow</h5>
-										<span class='badge badge-success'>10-02-2025 11:48:25</span>
-										<span class='badge badge-danger'>10-02-2025 11:48:45</span>
-										<span class='badge badge-default'>0h:0m:19s+803ms</span>
+										<h5 class="test-status text-fail">OrangeHRMLogin Login functionality using resuable flow</h5>
+										<span class='badge badge-success'>11-02-2025 14:54:12</span>
+										<span class='badge badge-danger'>11-02-2025 14:54:38</span>
+										<span class='badge badge-default'>0h:0m:25s+891ms</span>
 									</div>
 																	</div>
 							</div>
@@ -140,8 +140,8 @@
 		<div class="card-header" role="tab">
 			<div class="card-title pl-3">
 				<div class="node">Scenario: Verify Successful Login to orange hrm website using valid credentials</div>
-				<div class="status-avatar float-left pass-bg">
-					<i class="fa fa-check text-white"></i>
+				<div class="status-avatar float-left fail-bg">
+					<i class="fa fa-times text-white"></i>
 				</div>
 			</div>
 		</div>
@@ -193,8 +193,17 @@
                                 <span class="alert-icon pass-bg">
                                     <i class="fa fa-check text-white"></i>
                                 </span>
-                                <span>Then User selects city and country information</span>
+                                <span>Then User enters "Orangeuser01" text in "SystemUsersUsername" textfield</span>
                             </div>
+                            <div class="d-flex align-items-center justify-content-start then" title="">
+                                <span class="alert-icon fail-bg">
+                                    <i class="fa fa-times text-white"></i>
+                                </span>
+                                <span>Then User selects "ESS" from "userrole" divdropdown</span>
+                            </div>
+			<div class="details">no such element: Unable to locate element: {"method":"xpath","selector":"//div[contains(@class, 'dropdown')]//div[text()='ESS']"}
+  (Session info: chrome=133.0.6943.54); For documentation on this error, please visit: https://www.selenium.dev/documentation/webdriver/troubleshooting/errors#no-such-element-exception</div>
+			<span class="badge badge-primary"><img class='r-img' title='' onerror='this.style.display="none"' data-featherlight='C:\Users\vikum\source\repos\VKNewSpecFlowProject1\VKNewSpecFlowProject1\TestResults\Verify Successful Login to orange hrm website using valid credentials.png' src='C:\Users\vikum\source\repos\VKNewSpecFlowProject1\VKNewSpecFlowProject1\TestResults\Verify Successful Login to orange hrm website using valid credentials.png' data-src='C:\Users\vikum\source\repos\VKNewSpecFlowProject1\VKNewSpecFlowProject1\TestResults\Verify Successful Login to orange hrm website using valid credentials.png'></span>
                     </div>
 				</div>
 	</div>
@@ -232,11 +241,11 @@
 	                </div>
 	            </div>
 	            <div class="card-footer">
-	                <div><small data-tooltip='100%'>
-	                    <b>1</b> features passed
+	                <div><small data-tooltip='0%'>
+	                    <b>0</b> features passed
                     </small></div>
 	                <div>
-	                    <small data-tooltip='0%'><b>0</b> features failed, 
+	                    <small data-tooltip='100%'><b>1</b> features failed, 
 	                    <b data-tooltip='0%'>0</b> others
 	                    </small>
                     </div>
@@ -254,9 +263,9 @@
 	                </div>
 	            </div>
 	            <div class="card-footer">
-	                <div><small data-tooltip='100%'><b>1</b> scenarios passed</small></div>
+	                <div><small data-tooltip='0%'><b>0</b> scenarios passed</small></div>
 	                <div>
-	                    <small data-tooltip='0%'><b>0</b> scenarios failed, 
+	                    <small data-tooltip='100%'><b>1</b> scenarios failed, 
 	                    <b data-tooltip='0%'>0</b> others
 	                    </small>
                     </div>
@@ -274,9 +283,9 @@
 	                </div>
 	            </div>
 	            <div class="card-footer">
-	                <div><small data-tooltip='100%'><b>8</b> steps passed</small></div>
+	                <div><small data-tooltip='88.88888888888889%'><b>8</b> steps passed</small></div>
 	                <div>
-	                    <small data-tooltip='0%'><b>0</b> steps failed, 
+	                    <small data-tooltip='11.11111111111111%'><b>1</b> steps failed, 
 	                    <b data-tooltip='0%'>0</b> others
 	                    </small>
                     </div>
@@ -294,7 +303,7 @@
 							<h2 class="font-size-28 font-weight-light">1</h2>
 							<span class="text-semibold text-success font-size-15">
 							<i class="ti-arrow-up font-size-11"></i> 
-								<span>100%</span>
+								<span>0%</span>
 							</span>
 						</div>
 						<div class="align-self-end">
@@ -313,7 +322,7 @@
 							<h2 class="font-size-28 font-weight-light">1</h2>
 							<span class="text-semibold text-success font-size-15">
 							<i class="ti-arrow-up font-size-11"></i> 
-								<span>100%</span>
+								<span>0%</span>
 							</span>
 						</div>
 						<div class="align-self-end">
@@ -329,7 +338,7 @@
 	                <div class="media justify-content-between">
 						<div>
 							<h6 class="card-title">Start</h6>
-							<h6 class="font-weight-light">10-02-2025 11:48:25</h6>
+							<h6 class="font-weight-light">11-02-2025 14:54:12</h6>
 							<span class="text-semibold text-success font-size-15">
 						</div>
 						<div class="align-self-end">
@@ -345,7 +354,7 @@
 	                <div class="media justify-content-between">
 						<div>
 							<h6 class="card-title">Duration</h6>
-							<h6 class="font-weight-light">00:00:20.0325637</h6>
+							<h6 class="font-weight-light">00:00:26.1544930</h6>
 							<span class="text-semibold text-danger font-size-15">
 						</div>
 						<div class="align-self-end">
@@ -393,33 +402,33 @@
 <script>
 	var statusGroup = {
     parentCount: 1,
-		passParent: 1,
-		failParent: 0,
+		passParent: 0,
+		failParent: 1,
 		fatalParent: 0,
 		errorParent: 0,
 		warningParent: 0,
 		skipParent: 0,
-		exceptionsParent: 0,
+		exceptionsParent: 1,
 		childCount: 1,
-		passChild: 1,
-		failChild: 0,
+		passChild: 0,
+		failChild: 1,
 		fatalChild: 0,
 		errorChild: 0,
 		warningChild: 0,
 		skipChild: 0,
 		infoChild: 0,
 		debugChild: 0,
-		exceptionsChild: 0,
-		grandChildCount: 8,
+		exceptionsChild: 1,
+		grandChildCount: 9,
 		passGrandChild: 8,
-		failGrandChild: 0,
+		failGrandChild: 1,
 		fatalGrandChild: 0,
 		errorGrandChild: 0,
 		warningGrandChild: 0,
 		skipGrandChild: 0,
 		infoGrandChild: 0,
 		debugGrandChild: 0,
-		exceptionsGrandChild: 0,
+		exceptionsGrandChild: 1,
 	};
 </script>
 
